@@ -28,6 +28,7 @@
         * [BUGFIX]: #2806 Fixed table sorting in Export Dialog.
         * [BUGFIX]: #2809 Fixed crash when trying to paste data into data grid with no rows in it.
         * [BUGFIX]: Fixed rolling back of row marked to deletion, if it was previously already marked as edited.
+        * [BUGFIX]: #2814 Fixed executing custom SQL function with same bind parameter used multiple times.
 
 [3.0.3]
         * [ADDED]: Added visual validation indicators to DbDialog, so user is informed why the "Ok" button is disabled at the moment.
